--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
         android:id="@+id/mainContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/mist"
-        tools:context=".main.MainActivity">
+        android:background="@color/very_dark_achromatic"
+        tools:context=".main.view.MainActivity">
 
         <TextView
             android:layout_width="match_parent"
