--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mist">#7DA3A1</color>
+    <color name="very_dark_achromatic">#212121</color>
+    <color name="gray_1">#616161</color>
 </resources>
