--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="dahlia_purple">#a50082</color>
     <color name="cerulean_blue">#008db7</color>
     <color name="chartreuse_yellow">#e3e548</color>
+    <color name="transparent">#00000000</color>
 </resources>
