--- a/app/src/main/res/layout/activity_record_mood.xml
+++ b/app/src/main/res/layout/activity_record_mood.xml
@@ -52,167 +52,175 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintStart_toStartOf="@+id/toolbar"/>
 
-        <LinearLayout
-            android:id="@+id/moodButtonLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="70dp"
-            app:layout_constraintStart_toStartOf="@+id/toolbar"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
-            <TextView
-                android:id="@+id/happyButton"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
-                android:gravity="center"
-                android:text="@string/happy_button_text"
-                android:textColor="@color/white"
-                android:drawableTop="@drawable/icon_happy"
-                android:drawableTint="@color/salmon_pink"
-                android:textSize="50px"/>
-
-            <TextView
-                android:id="@+id/angerButton"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
-                android:gravity="center"
-                android:text="@string/anger_button_text"
-                android:textColor="@color/white"
-                android:drawableTop="@drawable/icon_anger"
-                android:drawableTint="@color/dahlia_purple"
-                android:textSize="50px"/>
-
-            <TextView
-                android:id="@+id/sadButton"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
-                android:gravity="center"
-                android:text="@string/sad_button_text"
-                android:textColor="@color/white"
-                android:drawableTop="@drawable/icon_sad"
-                android:drawableTint="@color/cerulean_blue"
-                android:textSize="50px"/>
-
-            <TextView
-                android:id="@+id/funButton"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
-                android:gravity="center"
-                android:text="@string/fun_button_text"
-                android:textColor="@color/white"
-                android:drawableTop="@drawable/icon_fun"
-                android:drawableTint="@color/chartreuse_yellow"
-                android:textSize="50px"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/detailLayout"
+        <ScrollView
+            android:id="@+id/moodDetailsScrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="100dp"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="@+id/moodButtonLayout"
-            app:layout_constraintTop_toBottomOf="@+id/moodButtonLayout"
-            tools:visibility="visible">
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
-                android:id="@+id/selectDateLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="16dp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:id="@+id/moodButtonLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/select_date_title"
-                    android:textColor="@color/white"
-                    android:textSize="50px"/>
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="70dp">
+
+                    <TextView
+                        android:id="@+id/happyButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:gravity="center"
+                        android:text="@string/happy_button_text"
+                        android:textColor="@color/white"
+                        android:drawableTop="@drawable/icon_happy"
+                        android:drawableTint="@color/salmon_pink"
+                        android:textSize="50px"/>
+
+                    <TextView
+                        android:id="@+id/angerButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginLeft="20dp"
+                        android:gravity="center"
+                        android:text="@string/anger_button_text"
+                        android:textColor="@color/white"
+                        android:drawableTop="@drawable/icon_anger"
+                        android:drawableTint="@color/dahlia_purple"
+                        android:textSize="50px"/>
+
+                    <TextView
+                        android:id="@+id/sadButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginLeft="20dp"
+                        android:gravity="center"
+                        android:text="@string/sad_button_text"
+                        android:textColor="@color/white"
+                        android:drawableTop="@drawable/icon_sad"
+                        android:drawableTint="@color/cerulean_blue"
+                        android:textSize="50px"/>
+
+                    <TextView
+                        android:id="@+id/funButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginLeft="20dp"
+                        android:gravity="center"
+                        android:text="@string/fun_button_text"
+                        android:textColor="@color/white"
+                        android:drawableTop="@drawable/icon_fun"
+                        android:drawableTint="@color/chartreuse_yellow"
+                        android:textSize="50px"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/detailLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="100dp"
+                    android:visibility="invisible"
+                    tools:visibility="visible">
+
+                    <LinearLayout
+                        android:id="@+id/selectDateLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:padding="16dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/select_date_title"
+                            android:textColor="@color/white"
+                            android:textSize="50px"/>
+
+                        <Button
+                            android:id="@+id/dateButton"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:backgroundTint="@color/white"
+                            android:textSize="40px"
+                            android:textColor="@color/black"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/timeZoneLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:padding="16dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/time_zone_title"
+                            android:textColor="@color/white"
+                            android:textSize="50px"/>
+
+                        <androidx.appcompat.widget.AppCompatSpinner
+                            android:id="@+id/timeZoneSpinner"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded_border_gray_1"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/memoLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/memo_title"
+                            android:textColor="@color/white"
+                            android:textSize="50px"/>
+
+                        <EditText
+                            android:id="@+id/memoEditText"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:textSize="40px"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <Button
-                    android:id="@+id/dateButton"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/white"
-                    android:textSize="40px"
-                    android:textColor="@color/black"/>
-
+                    android:id="@+id/saveButton"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="60dp"
+                    android:layout_gravity="center"
+                    android:text="@string/save_button_text"
+                    android:textSize="20dp"
+                    android:visibility="invisible"
+                    tools:visibility="visible"/>
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/timeZoneLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="16dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/time_zone_title"
-                    android:textColor="@color/white"
-                    android:textSize="50px"/>
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/timeZoneSpinner"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded_border_gray_1"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/memoLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/memo_title"
-                    android:textColor="@color/white"
-                    android:textSize="50px"/>
-
-                <EditText
-                    android:id="@+id/memoEditText"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="40px"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="60dp"
-            android:text="@string/save_button_text"
-            android:textSize="20dp"
-            android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@+id/detailLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:visibility="visible"/>
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
